gcc/testsuite/rust/rustc/ui/resolve/issue-22692.rs
fn main() {
    let _ = String.new(); // { dg-error ".E0423." "" { target *-*-* } }
}

